--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
             <version>11.1.2</version>
         </dependency>
         <dependency>
+            <!--Librería para javafx-->
             <groupId>org.kordamp.bootstrapfx</groupId>
             <artifactId>bootstrapfx-core</artifactId>
             <version>0.4.0</version>
